--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,97 +1,4 @@
-.bg-color-black {
-  background-color: var(--color-black);
-}
-.bg-color-pink {
-  background-color: var(--color-pink);
-}
-.bg-color-yellow {
-  background-color: var(--color-yellow);
-}
-.bg-color-white {
-  background-color: var(--color-white);
-}
-.bg-color-orange {
-  background-color: var(--color-orange);
-}
-.top-r-radius {
-  border-radius: 0px 381px 0px 0px
-}
-.top-l-radius {
-  border-radius: 381px 0px 0px 0px
-}
-.color-white {
-  color: var(--color-white);
-}
-.color-black {
-  color: var(--color-black);
-}
-.color-yellow {
-  color: var(--color-yellow);
-}
-.link-card {
-  box-shadow: 0px 6px 16px #6F711F;
-  border-radius: 23px;
-}
-.fs-100px {
-  font-size: 100px;
-}
-.fs-21px {
-  font-size: 21px;
-}
-.fs-12px {
-  font-size: 12px;
-}
-.fw-700 {
-  font-weight: 700;
-}
-.fw-400 {
-  font-weight: 400;
-}
-.p-t-26 {
-  padding-top: 26px;
-}
-.p-l-32 {
-  padding-left: 32px;
-}
-.p-r-32 {
-  padding-right: 32px;
-}
-.p-b-16 {
-  padding-bottom: 16px;
-}
-.p-t-16 {
-  padding-top: 16px;
-}
-.p-t-19 {
-  padding-top: 19px;
-}
-.p-t-12 {
-  padding-top: 12px;
-}
-.m-t-41 {
-  margin-top: 41px;
-}
-.p-t-46 {
-  padding-top: 46px;
-}
-.display-flex {
-  display: flex;
-}
-.justify-end {
-  justify-content: end;
-}
-.justify-center {
-  justify-content: center;
-}
-.align-center {
-  align-items: center;
-}
-.fd-column {
-  flex-direction: column;
-}
-.section {
-  height: 768px;
-}
+
 button {
   border: none;
   outline: none;
@@ -105,4 +12,5 @@ button {
   --color-pink: #E22697;
   --color-yellow: #FFF6D0;
   --color-orange: #F7931E;
+  --color-dark-green: #666724;
 }
