--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -13,6 +13,12 @@
 .bg-color-orange {
   background-color: var(--color-orange);
 }
+.bg-color-orange-2 {
+  background-color: var(--color-orange-2);
+}
+.bg-color-dark-green {
+  background-color: var(--color-dark-green);
+}
 .color-white {
    color: var(--color-white);
  }
