--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -4,11 +4,20 @@
 .fs-21px {
   font-size: 21px;
 }
+.fs-24px {
+  font-size: 24px;
+}
+.fs-19px {
+  font-size: 21px;
+}
 .fs-12px {
   font-size: 12px;
 }
 .fs-16px {
   font-size: 16px;
+}
+.fs-48px {
+  font-size: 48px;
 }
 .fw-700 {
   font-weight: 700;
