--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -25,6 +25,9 @@
 .color-dark-green {
    color: var(--color-dark-green);
  }
+.color-dark-green-2 {
+   color: var(--color-dark-green-2);
+ }
 .color-black {
   color: var(--color-black);
 }
