--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -32,4 +32,5 @@ button {
   --color-orange: #F7931E;
   --color-orange-2: #FEE69F;
   --color-dark-green: #666724;
+  --color-dark-green-2: #6F711F;
 }
