--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -1,9 +1,3 @@
-.top-r-radius {
-  border-radius: 0px 381px 0px 0px
-}
-.top-l-radius {
-  border-radius: 381px 0px 0px 0px
-}
 .b-r {
   border-radius: 35px;
 }
@@ -62,8 +56,14 @@
 .p-b-16 {
   padding-bottom: 16px;
 }
+.m-b-30 {
+  margin-bottom: 30px;
+}
 .p-t-16 {
   padding-top: 16px;
+}
+.p-t-4 {
+  padding-top: 4px;
 }
 .p-t-19 {
   padding-top: 19px;
