--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -7,6 +7,12 @@
 .fs-24px {
   font-size: 24px;
 }
+.fs-12px {
+  font-size: 12px;
+}
+.fs-28px {
+  font-size: 28px;
+}
 .fs-19px {
   font-size: 21px;
 }
