--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -23,6 +23,7 @@ button {
   color: white;
   border-radius: 32px;
   padding: 13px 20px 13px 20px;
+  cursor: pointer;
 }
 :root {
   --color-black: #000000;
