--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -98,6 +98,9 @@
 .justify-around {
   justify-content: space-around;
 }
+.justify-end {
+  justify-content: end;
+}
 .align-center {
   align-items: center;
 }
