--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -13,11 +13,17 @@
 .fs-28px {
   font-size: 28px;
 }
+.fs-30px {
+  font-size: 30px;
+}
 .fs-19px {
   font-size: 21px;
 }
 .fs-12px {
   font-size: 12px;
+}
+.fs-13px {
+  font-size: 13px;
 }
 .fs-16px {
   font-size: 16px;
